--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,88 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary: 90 14% 3% / 0.6;
+  --dark: 215 33% 10%;
+  --main-color: 47 97% 48%;
+  --primary-text: 345 6% 13%;
+  --secondary-text: 120 1% 77%;
+  --border: 90 3% 13%;
+  --miniCard: 90 5% 7%;
+  --shadow: 78 89% 46% / 15%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply bg-dark;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+#navbar {
+  position: fixed;
+  margin-top: 30px;
+  top: 0;
+  transition: top 0.8s;
+}
+
+/* #kaliImg {
+  -webkit-box-shadow: 10px -38px 131px -70px rgba(241,190,4,1);
+-moz-box-shadow: 10px -38px 131px -70px rgba(241,190,4,1);
+box-shadow: 10px -38px 131px -70px rgba(241,190,4,1);
+} */
+
+#homeSection {
+  background: radial-gradient(ellipse at center,  #f1be048a 0%,#111822 40%);
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.logos {
+  overflow: hidden;
+  padding: 60px 0;
+  white-space: nowrap;
+  position: relative;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 20;
+}
+
+.logos:before {
+  left: 0;
+}
+
+.logos:after {
+  right: 0;
+}
+
+.logos-slide {
+  display: inline-block;
+  animation: 10s slide infinite linear;
+}
+
+.logos-slide img {
+  margin: 0 40px;
 }
